--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "level": "~0.17.0-1",
     "routes": "~0.2.0",
     "twit": "~1.1.11",
-    "mysql-stream-db": "0.0.1",
+    "mysql-stream-db": "0.0.4",
     "concat-stream": "~1.2.0",
     "handlebars": "~1.1.2",
-    "tap": "~0.4.4"
+    "tap": "~0.4.4",
+    "map-stream": "0.0.3",
+    "xtend": "~2.1.1",
+    "moment": "~2.4.0"
   },
   "devDependencies": {},
   "scripts": {
