--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "tap": "~0.4.4",
     "map-stream": "0.0.3",
     "xtend": "~2.1.1",
-    "moment": "~2.4.0"
+    "moment": "~2.4.0",
+    "client-sessions": "~0.4.0"
   },
   "devDependencies": {},
   "scripts": {
