--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "map-stream": "0.0.3",
     "xtend": "~2.1.1",
     "moment": "~2.4.0",
-    "client-sessions": "~0.4.0"
+    "client-sessions": "git://github.com/brianloveswords/node-client-sessions.git#50e3c18d01df6d7201b3e7749f63a2f46406bccc",
+    "habitat": "~1.1.0",
+    "lodash.foreach": "~2.3.0"
   },
   "devDependencies": {},
   "scripts": {
