--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "dependencies": {
     "routes": "~0.2.0",
     "twit": "~1.1.11",
-    "mysql-stream-db": "0.0.4",
+    "mysql-stream-db": "0.2.0",
     "concat-stream": "~1.2.0",
     "handlebars": "~1.1.2",
     "map-stream": "0.0.3",
     "xtend": "~2.1.1",
     "moment": "~2.4.0",
-    "client-sessions": "git://github.com/brianloveswords/node-client-sessions.git#50e3c18d01df6d7201b3e7749f63a2f46406bccc",
+    "client-sessions": "0.4.1",
     "habitat": "~1.1.0",
     "lodash.foreach": "~2.3.0",
     "request": "~2.27.0",
     "ecstatic": "~0.4.12",
-    "lodash.pluck": "~2.3.0"
+    "lodash.pluck": "~2.3.0",
+    "binary-csv": "~0.1.3",
+    "throttle-function": "~0.1.0"
   },
   "devDependencies": {
     "tap": "~0.4.4"
@@ -25,6 +27,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "BSD-2-Clause"
+  "author": "Brian J Brennan",
+  "license": "MIT"
 }
