--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "routes": "~0.2.0",
     "twit": "~1.1.11",
-    "mysql-stream-db": "0.2.0",
+    "streamsql": "0.4.0",
     "concat-stream": "~1.2.0",
     "handlebars": "~1.1.2",
     "map-stream": "0.0.3",
