--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "ecstatic": "~0.4.12",
     "lodash.pluck": "~2.3.0",
     "binary-csv": "~0.1.3",
-    "throttle-function": "~0.1.0"
+    "throttle-function": "~0.1.0",
+    "mysql": "~2.0.0-alpha9",
+    "supervisor": "~0.5.6"
   },
   "devDependencies": {
     "tap": "~0.4.4"
   },
   "scripts": {
+    "start": "supervisor server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian J Brennan",
