--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "binary-csv": "~0.1.3",
     "throttle-function": "~0.1.0",
     "mysql": "~2.0.0-alpha9",
-    "supervisor": "~0.5.6"
+    "supervisor": "~0.5.6",
+    "cleansocket": "~0.1.1"
   },
   "devDependencies": {
     "tap": "~0.4.4"
   },
   "scripts": {
-    "start": "supervisor server.js",
+    "start": "SOCKET=/tmp/posse-twitter.socket supervisor server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian J Brennan",
